apps/base/personal-website/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: personal-website
  namespace: personal-website
spec:
  replicas: 1
  selector:
    matchLabels:
      app: personal-website
  template:
    metadata:
      labels:
        app: personal-website
    spec:
      containers:
        - name: personal-website
          image: ghcr.io/enyuanman/personal-website:1.0.0
          ports:
            - containerPort: 80
