apps/base/personal-website/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: personal-website
  namespace: personal-website
spec:
  selector:
    app: personal-website
  ports:
    - port: 80
      targetPort: 80
